--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a:hover {
 
 ul {
     list-style: none; /* Remove default bullets */
-    padding-left: 0;  /* Remove default padding */
+    padding-left: 1em;  /* Remove default padding */
 }
 
 ul li::before {
@@ -46,7 +46,7 @@ ul li::before {
     font-weight: bold;
     display: inline-block;
     width: 1em;
-    margin-left: -1em;
+    margin-left: 0;
 }
 footer {
 text-align: center;
