--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; /* Updated stack *
     line-height: 1.6;      /* Improve readability */
